# toy-ci-server

./: Cargo.toml  README.md
build-agent/: Cargo.toml
build-agent/src/: config.rs
build-agent/tests/: config.rs
build-agent/tests/fixtures/: workflow-a.yml  workflow-b.yml
