[package]
name = "build-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.171", features = ["derive"] }
serde_yaml = "0.9.23"
tokio = { version = "1.29.1", features = ["full"] }
